add vitest + swc config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,4 +6,7 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
   },
+  "material-icon-theme.files.associations": {
+    "vitest.config.e2e.ts": "vitest",
+  },
 }
