--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "dayjs": "^1.11.15",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "zod": "^4.1.5"
+    "zod": "^4.1.5",
+    "zod-validation-error": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
