--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.15.0",
+    "bcryptjs": "^3.0.2",
     "dayjs": "^1.11.15",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
