--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.15.0",
     "bcryptjs": "^3.0.2",
     "dayjs": "^1.11.15",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "zod": "^4.1.5",
@@ -46,6 +49,7 @@
     "@swc/core": "^1.13.3",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.7",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "@vitest/coverage-v8": "^3.2.4",
     "copyfiles": "^2.4.1",
