--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/supertest": "^6.0.2",
     "@vitest/coverage-v8": "^3.2.4",
     "copyfiles": "^2.4.1",
+    "dotenv": "^17.2.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
