--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,12 @@ DATABASE_URL="file:./dev.db"
 # NestJS Port
 PORT="3333"
 
+# Upload (AWS)
+AWS_REGION=""
+AWS_BUCKET_NAME=""
+AWS_ACCESS_KEY_ID=""
+AWS_SECRET_ACCESS_KEY=""
+
 # Auth (JWT)
 JWT_PRIVATE_KEY=""
 JWT_PUBLIC_KEY=""
