--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "postinstall": "prisma generate",
     "prebuild": "prisma generate",
-    "build": "nest build && copyfiles -u 1 \"src/generated/**/*\" dist/src/",
+    "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -53,7 +53,6 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "@vitest/coverage-v8": "^3.2.4",
-    "copyfiles": "^2.4.1",
     "dotenv": "^17.2.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
