--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.0",
     "@prisma/client": "^6.15.0",
+    "@scalar/nestjs-api-reference": "^1.0.1",
     "bcryptjs": "^3.0.2",
     "dayjs": "^1.11.15",
     "passport": "^0.7.0",
