--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ AWS_BUCKET_NAME=""
 AWS_ACCESS_KEY_ID=""
 AWS_SECRET_ACCESS_KEY=""
 
+# Front-End URL
+FRONTEND_URL="http://localhost:3000"
+
 # Auth (JWT)
 JWT_PRIVATE_KEY=""
 JWT_PUBLIC_KEY=""
