--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@prisma/client": "^6.15.0",
     "@scalar/nestjs-api-reference": "^1.0.1",
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "dayjs": "^1.11.15",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -50,6 +51,7 @@
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@swc/core": "^1.13.3",
+    "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
