--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ AWS_BUCKET_NAME=""
 AWS_ACCESS_KEY_ID=""
 AWS_SECRET_ACCESS_KEY=""
 
+# Node Environment
+NODE_ENV="development"
+
 # Front-End URL
 FRONTEND_URL="http://localhost:3000"
 
