feat: add UploadAndCreateAttachmentsController and related use case for handling file uploads

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@swc/core": "^1.13.3",
     "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
