fix: update DATABASE_URL to use absolute path in .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Prisma (Database) - SQLite
-DATABASE_URL="file:./dev.db"
+# Always use absolute path to avoid issues with different working directories
+DATABASE_URL="file:C:/prisma/dev.db"
 
 # NestJS Port
 PORT="3333"
