--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "test:e2e": "vitest run --config ./vitest.config.e2e.ts",
     "test:e2e:watch": "vitest --config ./vitest.config.e2e.ts"
   },
+  "prisma": {
+    "seed": "ts-node --require tsconfig-paths/register prisma/seed/index.ts"
+  },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.886.0",
     "@nestjs/common": "^11.0.1",
